@@ -13,5 +13,11 @@ Usage on Ubuntu 18.04
 
 $ sudo apt-get install python-clang-4.0
 $ python2 ./ParseOrthancSDK.py --libclang=libclang-4.0.so.1 \
-          --source ../Resources/Orthanc/Sdk-1.8.1/orthanc/OrthancCPlugin.h \
+          --source ../Resources/Orthanc/Sdk-1.9.8/orthanc/OrthancCPlugin.h \
           --target ../Sources/Autogenerated
+
+
+Run through docker
+==================
+
+$ docker-compose up --build
